--- a/masari/assets/style.css
+++ b/masari/assets/style.css
@@ -157,3 +157,56 @@
 	-o-animation: rotating 2s linear infinite;
 	animation: rotating 2s linear infinite;
 }
+
+.msr-payment-container .meter {
+	position: relative;
+	margin: 20px 0 20px 0;
+	background: #9c9c9c;
+	-moz-border-radius: 25px;
+	-webkit-border-radius: 25px;
+	border-radius: 25px;
+	padding: 10px;
+	-webkit-box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+	-moz-box-shadow   : inset 0 -1px 1px rgba(255,255,255,0.3);
+	box-shadow        : inset 0 -1px 1px rgba(255,255,255,0.3);
+}
+.msr-payment-container.dark .meter {
+	background: #555;
+}
+.msr-payment-container .meter > span.progress{
+	display: block;
+	height: 20px;
+	-webkit-border-top-right-radius: 8px;
+	-webkit-border-bottom-right-radius: 8px;
+	-moz-border-radius-topright: 8px;
+	-moz-border-radius-bottomright: 8px;
+	border-top-right-radius: 8px;
+	border-bottom-right-radius: 8px;
+	-webkit-border-top-left-radius: 20px;
+	-webkit-border-bottom-left-radius: 20px;
+	-moz-border-radius-topleft: 20px;
+	-moz-border-radius-bottomleft: 20px;
+	border-top-left-radius: 20px;
+	border-bottom-left-radius: 20px;
+	background-color: rgb(43,194,83);
+	-webkit-box-shadow:
+			inset 0 2px 9px  rgba(255,255,255,0.3),
+			inset 0 -2px 6px rgba(0,0,0,0.4);
+	-moz-box-shadow:
+			inset 0 2px 9px  rgba(255,255,255,0.3),
+			inset 0 -2px 6px rgba(0,0,0,0.4);
+	box-shadow:
+			inset 0 2px 9px  rgba(255,255,255,0.3),
+			inset 0 -2px 6px rgba(0,0,0,0.4);
+	position: relative;
+	overflow: hidden;
+}
+.msr-payment-container .meter > span.text{
+	position: absolute;
+	top:0;left:0;right:0;bottom:0;
+	text-align: center;
+	line-height: 40px;
+}
+.msr-payment-container.dark .meter > span.text{
+	color:#191919;
+}
